2000-02-05  Cody Russell  <bratsche@dfw.net>
	* gnome-animator.[ch]: Rewrote much of GnomeAnimator in order to
	use GdkPixbuf instead of GdkImlib. Much of this is untested, and
	I'm still hacking away on it.

	* animator_demo.c: Rewritten.

	* Makefile.am: Re-enable GnomeAnimator and animator_demo.

2000-02-01  Iain Holmes  <ih@csd.abdn.ac.uk>

	* gnome-dateedit.c (select_clicked): Changed to use 
	gnome_stock_cursor_new.

	* gnome-dock-item.c (gnome_dock_item_grab_pointer): Same.

	* gnome-href.c (gnome_href_realize): Same.

	* gnome-icon-item.c (iti_start_selecting): Same.

	* gnome-mdi.c (book_motion): Same.

2000-01-31  Havoc Pennington  <hp@redhat.com>

	* gnome-gconf.c (gnome_gconf_get_gnome_libs_settings_relative):
	Function to make a key relative to the
	/apps/gnome-settings/<appname> directory
	(gnome_gconf_get_app_settings_relative): make a key relative to
	/apps/<appname>
	(gnome_gconf_post_args_parse): add gnome-libs settings dir to our
	GConfClient

	* gnome-app.c (gnome_app_add_toolbar): Use gnome_app_setup_toolbar

	* gnome-app-helper.c (gnome_app_setup_toolbar): Function to set up
	toolbar preferences, uses GConf for some preferences now instead
	of gnome-preferences	
	
2000-01-31  Havoc Pennington  <hp@redhat.com>

	* gnome-messagebox.c (gnome_message_box_construct): turn on line
	wrap for message boxes

	* gnome-gconf.c (gnome_default_gconf_client_error_handler): Set up
	the default error handler dialog to display GConf errors that
	aren't explicitly handled.

2000-01-31  Havoc Pennington  <hp@redhat.com>

	* gtkpixmapmenuitem.h (struct _GtkPixmapMenuItemClass): new class
	fields to track the number of GtkPixmapMenuItem that actually have
	pixmaps; if none, then we drop the toggle size to that of a
	standard menu item. Basically this means that now if you turn off
	pixmaps there isn't a big gap on the left of your menus.

	* gtkpixmapmenuitem.c (gtk_pixmap_menu_item_init): remove
	pointless set of toggle_size field in menu item instance