@@ -1,3 +1,7 @@
+Sat Feb 05 18:29:26 2000  George Lebl <jirka@5z.com>
+
+	* gnome-file-entry.[ch]: use gboolean in places of int for bools
+
 2000-02-05  Cody Russell  <bratsche@dfw.net>
 	* gnome-animator.[ch]: Rewrote much of GnomeAnimator in order to
 	use GdkPixbuf instead of GdkImlib. Much of this is untested, and
